<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/lost_item_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/question" />

    <RelativeLayout
        android:layout_width="269dp"
        android:layout_height="389dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp">

        <EditText
            android:id="@+id/add_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/lost_item_name"
            android:inputType="textPersonName"
            android:textCursorDrawable="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/add_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_item_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/time_it_was_lost"
            android:inputType="time"
            android:textCursorDrawable="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/add_item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_item_time"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:drawableStart="@drawable/ic_map_marker_black_24dp"
            android:ellipsize="end"
            android:hint="@string/where_it_was_lost"
            android:includeFontPadding="true"
            android:maxLines="1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_item_description"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_below="@+id/add_item_address"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="23dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimaryDark"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/short_description"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:singleLine="true"
            android:textCursorDrawable="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_item_description"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_to_search_list"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>

</RelativeLayout>

